--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@
   --color-bg:  #291502;
   --color-bg-1: #1e0e01;
   --color-primary: #1e0e01;
-  --color-bg-2: #291502;
-  --color-white: rgb(204, 204, 204);
+  --color-bg-2: #f1a661;
+  --color-white: #fdeedc;
   --cat-hover: #4e2801;
   --team-hover: #4e2801;
 }
